update edited n_template

--- a/n_template/hocphan.html
+++ b/n_template/hocphan.html
@@ -73,7 +73,9 @@
                                                                         <noscript></noscript>
                                                                     </svg></div>
                                                             </div>
-                                                            <div class="dgsfd5i"><span
+                                                            <div class="dgsfd5i">
+                                                                <i class="fa solid fa-apple"></i>
+                                                                <span
                                                                     class="SetPageModeButton-modeName">Live</span></div>
                                                         </div>
                                                     </a></span>
@@ -97,7 +99,9 @@
                                                                     <noscript></noscript>
                                                                 </svg></div>
                                                         </div>
-                                                        <div class="dgsfd5i"><span
+                                                        <div class="dgsfd5i">
+                                                            <i class="fa solid fa-table"></i>
+                                                            <span
                                                                 class="SetPageModeButton-modeName">Thẻ ghi nhớ</span>
                                                         </div>
                                                     </div>
@@ -117,7 +121,9 @@
                                                                     <noscript></noscript>
                                                                 </svg></div>
                                                         </div>
-                                                        <div class="dgsfd5i"><span
+                                                        <div class="dgsfd5i">
+                                                            <i class="fa solid fa-book"></i>
+                                                            <span
                                                                 class="SetPageModeButton-modeName">Học</span></div>
                                                     </div>
                                                 </a></span><span class="SetPageModes-buttonWrapper"><a aria-label="Viết"
@@ -135,7 +141,9 @@
                                                                     <noscript></noscript>
                                                                 </svg></div>
                                                         </div>
-                                                        <div class="dgsfd5i"><span
+                                                        <div class="dgsfd5i">
+                                                            <i class="fa solid fa-edit"></i>
+                                                            <span
                                                                 class="SetPageModeButton-modeName">Viết</span></div>
                                                     </div>
                                                 </a></span><span class="SetPageModes-buttonWrapper"><a
@@ -154,7 +162,9 @@
                                                                     <noscript></noscript>
                                                                 </svg></div>
                                                         </div>
-                                                        <div class="dgsfd5i"><span
+                                                        <div class="dgsfd5i">
+                                                            <i class="fa solid fa-check"></i>
+                                                            <span
                                                                 class="SetPageModeButton-modeName">Chính tả</span></div>
                                                     </div>                                       
                                         </div>
